Added new debate performance

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-148759407-1"
-    ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148759407-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -20,46 +18,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>A Collection of Popular Andrew Yang YouTube Videos</title>
     <link rel="stylesheet" href="main.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap"
-      rel="stylesheet"
-    />
-    <meta
-      name="description"
-      content="Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join our fight to put Humanity First."
-    />
-    <meta
-      property="og:site_name"
-      content="A Collection of Popular Andrew Yang YouTube Videos"
-    />
-    <meta
-      property="og:image"
-      content="https://andrewyangintro.com/assets/social-thumb-videos.png"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet" />
+    <meta name="description" content="Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join our fight to put Humanity First." />
+    <meta property="og:site_name" content="A Collection of Popular Andrew Yang YouTube Videos" />
+    <meta property="og:image" content="https://andrewyangintro.com/assets/social-thumb-videos.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://andrewyangintro.com" />
-    <meta
-      property="og:title"
-      content="A Collection of Popular Andrew Yang YouTube Videos"
-    />
+    <meta property="og:title" content="A Collection of Popular Andrew Yang YouTube Videos" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="610" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:description"
-      content="Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First."
-    />
-    <meta
-      name="twitter:title"
-      content="A Collection of Popular Andrew Yang YouTube Videos"
-    />
-    <meta
-      name="twitter:image"
-      content="https://andrewyangintro.com/assets/social-thumb-videos.png"
-    />
+    <meta name="twitter:description" content="Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First." />
+    <meta name="twitter:title" content="A Collection of Popular Andrew Yang YouTube Videos" />
+    <meta name="twitter:image" content="https://andrewyangintro.com/assets/social-thumb-videos.png" />
     <meta name="twitter:creator" content="@ericcurtis" />
     <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
   </head>
+
   <body>
     <div class="background-image"></div>
 
@@ -72,9 +47,7 @@
           <p>
             Friends, I have taken some time over the last few months to learn
             about the candidates for the 2020 election and
-            <a href="http://yang2020.com" title="Andrew Yang for President"
-              >Andrew Yang</a
-            >
+            <a href="http://yang2020.com" title="Andrew Yang for President">Andrew Yang</a>
             really stands out.
           </p>
 
@@ -87,11 +60,7 @@
             I do think he will win if his message gets out, and we need to make
             sure other politicians see how excited people are about his vision
             of
-            <a
-              href="https://www.yang2020.com/policies/human-capitalism/"
-              title="Human centered capitalism"
-              >Human-centered Capitalism</a
-            >.
+            <a href="https://www.yang2020.com/policies/human-capitalism/" title="Human centered capitalism">Human-centered Capitalism</a>.
           </p>
 
           <h2>
@@ -116,32 +85,11 @@
           </p>
         </section>
         <section class="videos">
-          <iframe
-            width="300"
-            height="200"
-            src="https://www.youtube.com/embed/GkepAtjSJLI"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
+          <iframe width="300" height="200" src="https://www.youtube.com/embed/GkepAtjSJLI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-          <iframe
-            width="300"
-            height="200"
-            src="https://www.youtube.com/embed/mw3WJr_q4C8"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
+          <iframe width="300" height="200" src="https://www.youtube.com/embed/mw3WJr_q4C8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-          <iframe
-            width="300"
-            height="200"
-            src="https://www.youtube.com/embed/kzvi4QBBnec"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
+          <iframe width="300" height="200" src="https://www.youtube.com/embed/kzvi4QBBnec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
       </div>
     </div>
@@ -179,17 +127,9 @@
           <p>
             Please do that. Talk to your parents, talk to your kids, talk to
             your friends, talk to your co-workers. Get a
-            <a
-              href="https://shop.yang2020.com/collections/signs"
-              title="Andrew Yang Yard Signs"
-              >yard sign</a
-            >
+            <a href="https://shop.yang2020.com/collections/signs" title="Andrew Yang Yard Signs">yard sign</a>
             and a
-            <a
-              href="https://shop.yang2020.com/collections/bumper-stickers"
-              title="Andrew Yang Bumper Stickers"
-              >bumper sticker</a
-            >. Let’s get his name recognition up.
+            <a href="https://shop.yang2020.com/collections/bumper-stickers" title="Andrew Yang Bumper Stickers">bumper sticker</a>. Let’s get his name recognition up.
           </p>
         </section>
       </div>
@@ -198,47 +138,15 @@
     <div class="main-content lower-content">
       <section class="long-form-videos">
         <h2>Debate Performances:</h2>
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/6crg579lpds"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
 
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/LVkCfCQDXe8"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/3siHgkArebE"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/sSbou44OUHg"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/eA-69bxpWfs"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/dNSGMDu58Ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/6crg579lpds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/LVkCfCQDXe8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/3siHgkArebE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/sSbou44OUHg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/eA-69bxpWfs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
       <section class="long-form-videos">
         <h2>
@@ -246,84 +154,28 @@
         </h2>
 
         <!-- Joe Rogan -->
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/cTsEzmFamZ8"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/cTsEzmFamZ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- Karen Hunter -->
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/XAehF8ZdwIU"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/XAehF8ZdwIU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- Useful Idiots -->
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/iKuZppYwnq4"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/iKuZppYwnq4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- Des Moines Reg -->
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/72fXyHzaNZ4"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/72fXyHzaNZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- Wapo -->
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/2aebkCjUSgk"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/2aebkCjUSgk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- Shaprio -->
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/-DHuRTvzMFw"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/-DHuRTvzMFw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- Breakfast Club -->
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/87M2HwkZZcw"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/87M2HwkZZcw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- h3 -->
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/otEbT0l_Hbg"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/otEbT0l_Hbg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
     </div>
 
@@ -347,17 +199,9 @@
           </h2>
           <p>
             His social media and website. His site details over
-            <a
-              href="https://www.yang2020.com/policies/"
-              title="Andrew Yang's policies"
-              >150 policies</a
-            >
+            <a href="https://www.yang2020.com/policies/" title="Andrew Yang's policies">150 policies</a>
             and
-            <a
-              href="https://www.yang2020.com/meet-andrew/"
-              title="Andrew's story"
-              >the story</a
-            >
+            <a href="https://www.yang2020.com/meet-andrew/" title="Andrew's story">the story</a>
             of why he is running for president.
           </p>
 
@@ -366,46 +210,22 @@
           </h2>
           <ul class="social-links">
             <li>
-              <a
-                href="https://www.facebook.com/andrewyang2020/"
-                title="Andrew Yang for President 2020 Home on Facebook"
-                >Facebook</a
-              >
+              <a href="https://www.facebook.com/andrewyang2020/" title="Andrew Yang for President 2020 Home on Facebook">Facebook</a>
             </li>
             <li>
-              <a
-                href="https://twitter.com/andrewyang"
-                title="Andrew Yang (@AndrewYang) | Twitter"
-                >Twitter</a
-              >
+              <a href="https://twitter.com/andrewyang" title="Andrew Yang (@AndrewYang) | Twitter">Twitter</a>
             </li>
             <li>
-              <a
-                href="https://www.youtube.com/channel/UCriIuQZpMi6gEt_2P7xKCww?disable_polymer=true"
-                title="Andrew Yang for President 2020 - YouTube"
-                >Youtube</a
-              >
+              <a href="https://www.youtube.com/channel/UCriIuQZpMi6gEt_2P7xKCww?disable_polymer=true" title="Andrew Yang for President 2020 - YouTube">Youtube</a>
             </li>
             <li>
-              <a
-                href="https://www.instagram.com/andrewyang2020/"
-                title="Andrew Yang for President 2020 (@andrewyang2020)"
-                >Instagram</a
-              >
+              <a href="https://www.instagram.com/andrewyang2020/" title="Andrew Yang for President 2020 (@andrewyang2020)">Instagram</a>
             </li>
             <li>
-              <a
-                href="https://www.snapchat.com/add/andrewyang2020"
-                title="Latest Story on Snapchat"
-                >Snapchat</a
-              >
+              <a href="https://www.snapchat.com/add/andrewyang2020" title="Latest Story on Snapchat">Snapchat</a>
             </li>
             <li>
-              <a
-                href="https://www.reddit.com/r/YangForPresidentHQ/"
-                title="Andrew Yang on Reddit"
-                >Reddit</a
-              >
+              <a href="https://www.reddit.com/r/YangForPresidentHQ/" title="Andrew Yang on Reddit">Reddit</a>
             </li>
           </ul>
         </section>
@@ -422,4 +242,5 @@
       </div>
     </footer>
   </body>
+
 </html>
