--- a/index.html
+++ b/index.html
@@ -76,13 +76,21 @@
             the most important vision a presidential candidate has expressed in
             my lifetime.
           </p>
-          <p class="cta-box">
+          <p class="cta-box alt-color-2">
             <strong>Learn the math behind the Freedom Dividend</strong><br />
             <a href="https://freedom-dividend.com/">Freedom-dividend.com</a>
             presents a rigorous, detailed, peer-reviewed and transparent cost
             analysis of Andrew Yang's Universal Basic Income (UBI) plan — the
             Freedom Dividend.
           </p>
+
+
+          <p class="cta-box alt-color-1">
+            <strong>How many millions would the Freedom Dividend add to your community each month?</strong><br />
+
+            The Freedom Dividend would transform towns across America by giving every adult $1,000/mo. See how this would impact your community at <a href="https://everysinglemonth.org/">Every Single Month</a>.
+          </p>
+
         </section>
         <section class="videos">
           <iframe width="300" height="200" src="https://www.youtube.com/embed/GkepAtjSJLI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
