Changed video order

--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@
         <section class="videos">
           <iframe width="300" height="200" src="https://www.youtube.com/embed/GkepAtjSJLI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+          <!-- Des Moines Reg -->
+          <iframe width="300" height="200" src="https://www.youtube.com/embed/72fXyHzaNZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
           <iframe width="300" height="200" src="https://www.youtube.com/embed/mw3WJr_q4C8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-          <iframe width="300" height="200" src="https://www.youtube.com/embed/kzvi4QBBnec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
         </section>
       </div>
     </div>
@@ -170,8 +173,8 @@
         <!-- Useful Idiots -->
         <iframe width="300" height="200" src="https://www.youtube.com/embed/iKuZppYwnq4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-        <!-- Des Moines Reg -->
-        <iframe width="300" height="200" src="https://www.youtube.com/embed/72fXyHzaNZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- Van Jones -->
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/kzvi4QBBnec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- Wapo -->
         <iframe width="300" height="200" src="https://www.youtube.com/embed/2aebkCjUSgk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
