Mobile friendly site update

--- a/index.html
+++ b/index.html
@@ -44,39 +44,42 @@
           <h1>
             Make America Think Harder
           </h1>
-          <p>
-            Friends, I have taken some time over the last few months to learn
-            about the candidates for the 2020 election and
-            <a href="http://yang2020.com" title="Andrew Yang for President">Andrew Yang</a>
-            really stands out.
-          </p>
 
-          <p class="cta-box">
-            <strong>Short on time?</strong> Good news the first video is only 12
-            minutes long and is a great introduction to Andrew's vision.
-          </p>
+          <p>Friends and fellow citizens, I respectfully ask you to take a careful look at <a href="http://yang2020.com" title="Andrew Yang for President">Andrew&nbsp;Yang</a>.</p>
 
-          <p>
+          <p> He is a smart, pragmatic, data-first leader with <a href="https://www.yang2020.com/policies/">150+ policies</a> that I bet you agree with most of.</p>
+
+
+
+          <div class="cta-box alt-color-2 intro-box">
+            <strong>First four videos:</strong>
+            <ul class="video-list">
+              <li>Iowa Press - PBS show (25 min)</li>
+
+              <li>Iowa Democratic Party Speech (12 min)</li>
+
+              <li>Des Moines Reg. Editorial board (1 hr)</li>
+
+              <li>Trevor Noah Segment (6 min) </li>
+            </ul>
+          </div>
+
+          <!-- <p class="hide-mobile">
             I do think he will win if his message gets out, and we need to make
             sure other politicians see how excited people are about his vision
             of
             <a href="https://www.yang2020.com/policies/human-capitalism/" title="Human centered capitalism">Human-centered Capitalism</a>.
-          </p>
+          </p> -->
 
-          <h2>
+          <h2 class="hide-mobile">
             Why share this?
           </h2>
-          <!-- <p>
-            I am an idealist. When I shuffle off this mortal coil, I hope that
-            my country, and the world, are firmly on the path of being a better
-            place than when I was born.
-          </p> -->
-          <p>
+          <p class="hide-mobile">
             I would not normally share political content, but I think this is
             the most important vision a presidential candidate has expressed in
             my lifetime.
           </p>
-          <p class="cta-box alt-color-2">
+          <p class="cta-box  hide-mobile">
             <strong>Learn the math behind the Freedom Dividend</strong><br />
             <a href="https://freedom-dividend.com/">Freedom-dividend.com</a>
             presents a rigorous, detailed, peer-reviewed and transparent cost
@@ -85,7 +88,7 @@
           </p>
 
 
-          <p class="cta-box alt-color-1">
+          <p class="cta-box alt-color-1 hide-mobile">
             <strong>How many millions would the Freedom Dividend add to your community each month?</strong><br />
 
             The Freedom Dividend would transform towns across America by giving every adult $1,000/mo. See how this would impact your community at <a href="https://everysinglemonth.org/">Every Single Month</a>.
@@ -93,14 +96,33 @@
 
         </section>
         <section class="videos">
+
+          <!-- Iowa Press -->
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/DahyKQccudQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          <!-- Iowa Stump Speech -->
           <iframe width="300" height="200" src="https://www.youtube.com/embed/GkepAtjSJLI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           <!-- Des Moines Reg -->
           <iframe width="300" height="200" src="https://www.youtube.com/embed/72fXyHzaNZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+          <!-- Trevor Noah -->
           <iframe width="300" height="200" src="https://www.youtube.com/embed/mw3WJr_q4C8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+          <p class="cta-box hide-desktop">
+            <strong>Math behind the Freedom Dividend</strong><br />
+            <a href="https://freedom-dividend.com/">Freedom-dividend.com</a>
+            presents a rigorous, detailed, peer-reviewed and transparent cost
+            analysis of Andrew Yang's Universal Basic Income (UBI) plan — the
+            Freedom Dividend.
+          </p>
 
+
+          <p class="cta-box alt-color-1 hide-desktop">
+            <strong>How much would the Freedom Dividend add to your community each month?</strong><br />
+
+            The Freedom Dividend would transform towns across America by giving every adult $1,000/mo. See how this would impact your community at <a href="https://everysinglemonth.org/">Every Single Month</a>.
+          </p>
         </section>
       </div>
     </div>
@@ -112,14 +134,13 @@
             Does he have a shot at winning?
           </h2>
           <p>
-            He is in a great spot.
-          </p>
+            Andrew is starting to break through! And of all the candidates, he has <a href="https://twitter.com/nerdsforyang/status/1210970613826904065">highest favorabilty</a> with Republicans & Independents.</p>
           <p>
             Iowa and New Hampshire do not even vote until early 2020 and they
-            often select someone surprising, like Obama. However, much of the
-            main-stream media has not covered him in a fair manner.
+            often select someone surprising, like Obama.
           </p>
-          <p>
+          <p> However, much of the
+            main-stream media does not covered him in a fair manner.
             For him to win
             <strong>WE</strong> will need to share Andrew’s vision with as many
             people as we can.
@@ -130,18 +151,16 @@
           <h2>
             What can I do?
           </h2>
-          <p>
-            Take the time to listen to Andrew lay out his vision and then
-            critically think about it. If it resonates as much for you as it did
-            for me you will want to share it with everyone.
-          </p>
-          <p>
-            Please do that. Talk to your parents, talk to your kids, talk to
-            your friends, talk to your co-workers. Get a
-            <a href="https://shop.yang2020.com/collections/signs" title="Andrew Yang Yard Signs">yard sign</a>
-            and a
-            <a href="https://shop.yang2020.com/collections/bumper-stickers" title="Andrew Yang Bumper Stickers">bumper sticker</a>. Let’s get his name recognition up.
-          </p>
+          <ul class="video-list">
+            <li><a href="https://www.yang2020.com/" title="Donate to Yang">Donate to Yang - every little bit helps</a></li>
+            <li><a href="https://www.yang2020.com/Iowa/" title="Help in Iowa">Participate in Iowa</a></li>
+            <li><a href="https://www.yang2020.com/call/" title="Phone-bank for Yang">Phone-bank for Yang</a></li>
+            <li><a href="https://www.yang2020.com/text/" title="Text-bank for Yang">Text-bank for Yang</a></li>
+            <li><a href="https://shop.yang2020.com/collections/signs" title="Andrew Yang Yard Signs">Get a yard sign</a></li>
+            <li><a href="https://shop.yang2020.com/collections/bumper-stickers" title="Andrew Yang Bumper Stickers">Get a bumper sticker</a></li>
+            <li><a href="https://yanganswers.com/" title="Yang Answers">Learn more at Yang Answers</a></li>
+          </ul>
+
         </section>
       </div>
     </div>
@@ -161,7 +180,7 @@
       </section>
       <section class="long-form-videos">
         <h2>
-          Just a few of many long-form interviews:
+          Long-form interviews:
         </h2>
 
         <!-- Joe Rogan -->
@@ -186,7 +205,10 @@
         <iframe width="300" height="200" src="https://www.youtube.com/embed/87M2HwkZZcw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!-- h3 -->
-        <iframe width="300" height="200" src="https://www.youtube.com/embed/otEbT0l_Hbg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/2HXVws8ZQRc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <!-- Off the pill -->
+        <iframe width="300" height="200" src="https://www.youtube.com/embed/_P5P4_ISofI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
     </div>
 
@@ -205,17 +227,6 @@
         </section>
 
         <section class="text-content">
-          <h2>
-            Where can I learn more?
-          </h2>
-          <p>
-            His social media and website. His site details over
-            <a href="https://www.yang2020.com/policies/" title="Andrew Yang's policies">150 policies</a>
-            and
-            <a href="https://www.yang2020.com/meet-andrew/" title="Andrew's story">the story</a>
-            of why he is running for president.
-          </p>
-
           <h2>
             Yang's Social Media Links
           </h2>
