--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             Make America Think Harder
           </h1>
 
-          <p>Friends and fellow citizens, I respectfully ask you to take a careful look at <a href="http://yang2020.com" title="Andrew Yang for President">Andrew&nbsp;Yang</a>.</p>
+          <p>Friends and fellow citizens, I would not normally share political content, but I think this is the most important vision a presidential candidate has expressed in my lifetime.</p>
+          <p>
+            I respectfully ask you to take a careful look at <a href="http://yang2020.com" title="Andrew Yang for President">Andrew&nbsp;Yang</a>.</p>
 
           <p> He is a smart, pragmatic, data-first leader with <a href="https://www.yang2020.com/policies/">150+ policies</a> that I bet you agree with most of.</p>
 
@@ -71,14 +73,14 @@
             <a href="https://www.yang2020.com/policies/human-capitalism/" title="Human centered capitalism">Human-centered Capitalism</a>.
           </p> -->
 
-          <h2 class="hide-mobile">
+          <!-- <h2 class="hide-mobile">
             Why share this?
           </h2>
           <p class="hide-mobile">
             I would not normally share political content, but I think this is
             the most important vision a presidential candidate has expressed in
             my lifetime.
-          </p>
+          </p> -->
           <p class="cta-box  hide-mobile">
             <strong>Learn the math behind the Freedom Dividend</strong><br />
             <a href="https://freedom-dividend.com/">Freedom-dividend.com</a>
