--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             often select someone surprising, like Obama.
           </p>
           <p> However, much of the
-            main-stream media does not covered him in a fair manner.
+            main-stream media does not cover him in a fair manner.
             For him to win
             <strong>WE</strong> will need to share Andrew’s vision with as many
             people as we can.
