--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             Does he have a shot at winning?
           </h2>
           <p>
-            Andrew is starting to break through! And of all the candidates, he has <a href="https://twitter.com/nerdsforyang/status/1210970613826904065">highest favorabilty</a> with Republicans & Independents.</p>
+            Andrew is starting to break through! And of all the candidates, he has <a href="https://twitter.com/nerdsforyang/status/1210970613826904065">highest favorability</a> with Republicans & Independents.</p>
           <p>
             Iowa and New Hampshire do not even vote until early 2020 and they
             often select someone surprising, like Obama.
