remove daily show clip

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
               <li>Des Moines Reg. Editorial board (1 hr)</li>
 
-              <li>Trevor Noah Segment (6 min) </li>
+              <!-- <li>Trevor Noah Segment (6 min) </li> -->
             </ul>
           </div>
 
@@ -109,7 +109,7 @@
           <iframe width="300" height="200" src="https://www.youtube.com/embed/72fXyHzaNZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           <!-- Trevor Noah -->
-          <iframe width="300" height="200" src="https://www.youtube.com/embed/mw3WJr_q4C8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!-- <iframe width="300" height="200" src="https://www.youtube.com/embed/mw3WJr_q4C8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
           <p class="cta-box hide-desktop">
             <strong>Math behind the Freedom Dividend</strong><br />
