--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
           <div class="cta-box alt-color-2 intro-box">
-            <strong>First four videos:</strong>
+            <strong>First three videos:</strong>
             <ul class="video-list">
               <li>Iowa Press - PBS show (25 min)</li>
 
