--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <img src="/assets/desmoines.png" alt="Freedom Diviend for Des Moines Iowa" class="esm-graphic">
 
-          <p class="cta-box4">See how this would impact your community at <a href="https://everysinglemonth.org/">Every Single Month</a> and visit <a href="https://freedom-dividend.com/">Freedom-dividend.com</a> to learn math behind the policy.</p>
+          <p class="cta-box4">See how this would impact your community at <a href="https://everysinglemonth.org/">Every Single Month</a> and visit <a href="https://freedom-dividend.com/">Freedom-dividend.com</a> to learn the math behind this policy.</p>
 
 
           <h2 class="hide-desktop policy-title">
