--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             Together we can eliminate poverty, transform our economy to handle the automation of jobs, and end the mindset of scarcity.
           </h2>
 
-          <p>The Freedom Dividend, one of <a href="https://www.yang2020.com/policies/">150+ policies</a>,  would transform towns across America by giving every adult $1,000/mo.</p>
+          <p>The Freedom Dividend, one of <a href="https://www.yang2020.com/policies/">150+ policies</a>, would transform towns across America by giving every adult $1,000/mo.</p>
 
           <img src="/assets/desmoines.png" alt="Freedom Diviend for Des Moines Iowa" class="esm-graphic">
 
@@ -228,6 +228,12 @@
         </a>
       </div>
     </footer>
+    <script type="text/javascript">
+      var _userway_config = {
+        account: 'zhfDh9hq3I'
+      };
+    </script>
+    <script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>
   </body>
 
 </html>
