--- a/index.html
+++ b/index.html
@@ -230,6 +230,21 @@
     </footer>
     <script type="text/javascript">
       var _userway_config = {
+        /* uncomment the following line to override default position*/
+        position: '6',
+        /* uncomment the following line to override default size (values: small, large)*/
+        /* size: 'large', */
+        /* uncomment the following line to override default language (e.g., fr, de, es, he, nl, etc.)*/
+        /* language: 'null', */
+        /* uncomment the following line to override color set via widget (e.g., #053f67)*/
+        /* color: '#2d68ff', */
+        /* uncomment the following line to override type set via widget (1=person, 2=chair, 3=eye, 4=text)*/
+        /* type: '1', */
+        /* uncomment the following lines to override the accessibility statement*/
+        /* statement_text: "Our Accessibility Statement", */
+        /* statement_url: "---/accessiblity", */
+        /* uncomment the following line to override support on mobile devices*/
+        /* mobile: true, */
         account: 'zhfDh9hq3I'
       };
     </script>
