--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             Together we can eliminate poverty, transform our economy to handle the automation of jobs, and end the mindset of scarcity.
           </h2>
 
-          <p>The Freedom Dividend, one of <a href="https://www.yang2020.com/policies/">150+ policies</a>, would transform towns across America by giving every adult $1,000/mo.</p>
+          <p>The Freedom Dividend, one of <a href="https://www.yang2020.com/policies/" title="Link to Andrew Yang Policies">150+ policies</a>, would transform towns across America by giving every adult $1,000/mo.</p>
 
           <img src="/assets/desmoines.png" alt="Freedom Diviend for Des Moines Iowa" class="esm-graphic">
 
-          <p class="cta-box4">See how this would impact your community at <a href="https://everysinglemonth.org/">Every Single Month</a> and visit <a href="https://freedom-dividend.com/">Freedom-dividend.com</a> to learn the math behind this policy.</p>
+          <p class="cta-box4">See how this would impact your community at <a href="https://everysinglemonth.org/" title="Learn how much the Freedom Dividend would bring to your community">Every Single Month</a> and visit <a href="https://freedom-dividend.com/" title="Learn the details behind the Freedom Dividend Policy">Freedom-dividend.com</a> to learn the math behind this policy.</p>
 
 
           <h2 class="hide-desktop policy-title">
@@ -99,16 +99,12 @@
             Andrew's Path to Victory
           </h2>
           <p>
-            Andrew is starting to break through! And of all the candidates, he has <a href="https://twitter.com/nerdsforyang/status/1210970613826904065">highest favorability</a> with Republicans & Independents.</p>
+            Andrew is starting to break through! And of all the candidates, he has <a href="https://twitter.com/nerdsforyang/status/1210970613826904065" title="Andrew Yang High Favorability with Independents and Republicans">highest favorability</a> with Republicans & Independents.</p>
           <p>
             Iowa and New Hampshire do not even vote until early 2020 and they
             often select someone surprising, like Obama.
           </p>
-          <p> However, much of the
-            main-stream media does not cover him in a fair manner.
-            For him to win
-            <strong>WE</strong> will need to share Andrew’s vision with as many
-            people as we can.
+          <p> However, much of the main-stream media does not cover him in a fair manner. For him to win <strong>WE</strong> will need to share Andrew’s vision with as many people as we can.
           </p>
         </section>
 
@@ -222,7 +218,7 @@
     <footer>
       <div class="main-content">
         Tweet at @EricCurtis with any suggestions, questions, or comments.<br /><br />
-        <a href="assets/YouTube-Andrew-Business-card.pdf">
+        <a href="assets/YouTube-Andrew-Business-card.pdf" title="Business card design with a link to this site">
           Click here to download a PDF file for a business card pointing users
           to this site.
         </a>
